getCordex 0.1.9003: by experiment (all variables at once)

--- a/config/config.yml
+++ b/config/config.yml
@@ -1,5 +1,4 @@
 # data
-driving_model: "NCC-NorESM1-M"
+driving_model: "MPI-M-MPI-ESM-MR"
+rcm_model: "RegCM4-7"
 experiment: ["historical", "rcp85"]
-rcm_model: "REMO2015"
-variable: ["hurs", "pr", "rsds", "rsus", "sfcWind", "tas"]
