--- a/config/config_test.yml
+++ b/config/config_test.yml
@@ -2,3 +2,10 @@
 driving_model: "MPI-M-MPI-ESM-MR"
 rcm_model: "ICTP-RegCM4-7"
 experiment: "rcp85"
+variable: ["hurs", "pr", "rsds", "rsus", "sfcWind", "tas"]
+
+# extract
+# Set for Paracou
+xutm: 5.267241344232334
+yutm: -52.92436802555797
+
