--- a/config/config_test.yml
+++ b/config/config_test.yml
@@ -3,9 +3,10 @@ driving_model: "MPI-M-MPI-ESM-MR"
 rcm_model: "ICTP-RegCM4-7"
 experiment: "rcp85"
 variable: ["hurs", "pr", "rsds", "rsus", "sfcWind", "tas"]
+time_freq_hr: 3
 
 # extract
 # Set for Paracou
 xutm: 5.267241344232334
 yutm: -52.92436802555797
-
+plot_variables: ["rainfall", "snet", "temperature", "vpd", "ws"]
