--- a/config/config.yml
+++ b/config/config.yml
@@ -3,8 +3,10 @@ driving_model: "MPI-M-MPI-ESM-MR"
 rcm_model: "ICTP-RegCM4-7"
 experiment: ["historical", "rcp26", "rcp85"]
 variable: ["hurs", "pr", "rsds", "rsus", "sfcWind", "tas"]
+time_freq_hr: 3
 
 # extract
 # Set for Paracou
 xutm: 5.267241344232334
 yutm: -52.92436802555797
+plot_variables: ["rainfall", "snet", "temperature", "vpd", "ws"]
