--- a/config/config_all.yml
+++ b/config/config_all.yml
@@ -1,6 +1,14 @@
 # data
-driving_model: "MPI-M-MPI-ESM-MR"
-rcm_model: "ICTP-RegCM4-7"
+driving_model: [
+  "MOHC-HadGEM2-ES",
+  "MPI-M-MPI-ESM-LR",
+  "MPI-M-MPI-ESM-MR",
+  "NCC-NorESM1-M"
+  ]
+rcm_model: [
+  "REMO2015",
+  "ICTP-RegCM4-7",
+  ]
 experiment: ["historical", "rcp26", "rcp85"]
 variable: ["hurs", "pr", "rsds", "rsus", "sfcWind", "tas"]
 time_freq_hr: 3
@@ -12,3 +20,6 @@ yutm: -52.92436802555797
 tz: "America/Cayenne"
 extrapolation_time_freq: 0.5
 plot_variables: ["rainfall", "snet", "temperature", "vpd", "ws"]
+
+# singularity
+troll: "https://github.com/sylvainschmitt/singularity-troll/releases/download/0.0.3/sylvainschmitt-singularity-troll.latest.sif"
