--- a/config/config_all.yml
+++ b/config/config_all.yml
@@ -1,8 +1,7 @@
 # data
 driving_model: [
   "MOHC-HadGEM2-ES",
-  "MPI-M-MPI-ESM-LR",
-  "MPI-M-MPI-ESM-MR",
+  "MPI-M-MPI-ESM", # MPI-M-MPI-ESM-LR_REMO2015 & MPI-M-MPI-ESM-MR_ICTP-RegCM4-7
   "NCC-NorESM1-M"
   ]
 rcm_model: [
