getCordex 0.1.9010: - wget for NCC-NorESM1-M for all RCMs and scenari - prepared for muse

--- a/config/config_one.yml
+++ b/config/config_one.yml
@@ -1,5 +1,5 @@
 # data
-driving_model: "MPI-M-MPI-ESM-MR"
+driving_model: "MPI-M-MPI-ESM"
 rcm_model: "ICTP-RegCM4-7"
 experiment: ["historical", "rcp26", "rcp85"]
 variable: ["hurs", "pr", "rsds", "rsus", "sfcWind", "tas"]
